--- a/index.html
+++ b/index.html
@@ -1,11 +1,70 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<title>تقييم حسابك</title>
-<link rel="stylesheet" href="style.css">
+    <!-- الترميز وحجم الشاشة -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- العنوان الرئيسي -->
+    <title>تقييم حسابك - فحص شامل ودقيق مع عرض النتائج الفورية</title>
+
+    <!-- وصف الصفحة (Meta Description) -->
+    <meta name="description" content="قم بإجراء تقييم شامل لحسابك أونلاين مع تحليل دقيق وعرض النتائج الفورية لتحسين أمانك وحماية بياناتك.">
+
+    <!-- الكلمات المفتاحية -->
+    <meta name="keywords" content="تقييم الحساب, فحص الحساب, تحليل البيانات, أمان الحساب, حماية الحساب, اختبار أمان أونلاين, تقييم أمان">
+
+    <!-- اللغة -->
+    <meta http-equiv="Content-Language" content="ar">
+
+    <!-- تعليمات لمحركات البحث -->
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+
+    <!-- Open Graph لتحسين المشاركة على الشبكات -->
+    <meta property="og:title" content="تقييم حسابك - فحص شامل ودقيق مع عرض النتائج الفورية">
+    <meta property="og:description" content="تحليل بياناتك وفحص شامل لحسابك أونلاين، مع عرض النتائج مباشرة بطريقة احترافية.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://example.com/">
+    <meta property="og:image" content="https://example.com/images/preview.jpg">
+    <meta property="og:locale" content="ar_AR">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="تقييم حسابك - فحص شامل ودقيق">
+    <meta name="twitter:description" content="تحليل بياناتك وفحص شامل لحسابك مع عرض النتائج مباشرة.">
+    <meta name="twitter:image" content="https://example.com/images/preview.jpg">
+
+    <!-- أيقونة الموقع -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- بيانات منظمة (Schema.org) لزيادة الظهور في Rich Snippets -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "تقييم حسابك",
+      "description": "فحص شامل ودقيق لحسابك مع عرض النتائج الفورية لتحسين الأمان وحماية البيانات.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Your Website Name",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://example.com/logo.png"
+        }
+      }
+    }
+    </script>
+
+    <!-- تحسين الأداء -->
+    <link rel="preload" href="style.css" as="style">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <!-- خط عربي جميل (اختياري) -->
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="font-family: 'Cairo', sans-serif;">
 
 <div id="app"></div>
 
@@ -186,3 +245,4 @@ renderStep();
 <script src="transitions.js" defer></script>
 </body>
 </html>
+
